--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,17 @@
         </dependency>
     </dependencies>
 
+    <distributionManagement>
+        <repository>
+            <id>verdox-releases</id>
+            <url>https://repo.verdox.de/#/releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>verdox-snapshots</id>
+            <url>https://repo.verdox.de/#/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+
     <build>
         <plugins>
             <plugin>
